[package]
name = "rdoh"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.102"

[profile.release]
strip = true
lto = true
